apps/cliente-microservice/Service-cliente-microservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliente-microservice-clusterip-service
  namespace: ingress-nginx
spec:
  selector:
    app: cliente-microservice
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8080
    - name: https-api
      port: 8443
      protocol: TCP
      targetPort: 8080
    - name: http-api
      port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
