apps/cliente-microservice/Ingress-cliente-microservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-fezinhadasorte-api
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.static-ip-name: fezinhadasorte-ip-external
    cert-manager.io/cluster-issuer: letsencrypt-fezinhadasorte-cluster-issuer
    nginx.ingress.kubernates.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app: cliente-microservice
spec:
  ingressClassName: nginx
  rules:
  - host: www.fezinhadasorte.com
    http:
      paths:
      - backend:
          service:
            name: cliente-microservice-clusterip-service
            port:
              number: 80
        path: /api
        pathType: Prefix
  - host: fezinhadasorte.com
    http:
      paths:
      - backend:
          service:
            name: cliente-microservice-clusterip-service
            port:
              number: 80
        path: /api
        pathType: Prefix
  tls:
  - hosts:
    - www.fezinhadasorte.com
    - fezinhadasorte.com
    secretName: letsencrypt-fezinhadasorte
